WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309387
WebPageProxy should ignore DidFailLoadForFrame message from non-loading process
https://bugs.webkit.org/show_bug.cgi?id=309387
Summary
WebPageProxy should ignore DidFailLoadForFrame message from non-loading process
Sihui Liu
Reported
2026-03-06 15:01:14 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2026-03-06 15:01:26 PST
rdar://168795695
Sihui Liu
Comment 2
2026-03-06 15:18:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/60099
EWS
Comment 3
2026-03-09 16:22:58 PDT
Committed
308947@main
(4d71f0dd2f9b): <
https://commits.webkit.org/308947@main
> Reviewed commits have been landed. Closing PR #60099 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug